--- a/_posts/2017-12-09-pitch-aid.md
+++ b/_posts/2017-12-09-pitch-aid.md
@@ -5,7 +5,35 @@ date:   2017-12-09 22:41:56 -0600
 categories: jekyll update
 ---
 During my time at Prime Digital Academy, I had the opportunity to work on a full stack application that matches my interests.
+
 As a regular fantasy baseball player, I set out to create an application that would help users manage starting pitchers in fantasy baseball. In standard fantasy baseball leagues, players are allowed nine slots for pitchers -- both starters and relievers. Multiple pitchers can also be stored on the bench, as a standard fantasy baseball team has a roster size of 25 slots and 22 active positions. 
+
 With a 162 game Major League Baseball season, it can be a challenge to manage the schedule of starting pitchers while maintaining the best use of your bench. Pitch Aid allows users to implement the name and stats of their starting pitchers and manage their progress over the course of a season.
-Thus, we have Pitch Aid. The application link is below:
+Thus, we have Pitch Aid. To check out the finished project, follow this link: [pitch aid][pitch-aid]
+
+The application uses the MEAN stack: MongoDB, Express, AngularJS and Node.js. Perhaps one of the most difficult challenges of the application was developing a loop that would calculate fantasy baseball points in a season plus points per fantasy start. The for loop code is below. It was not the prettiest line of code, but it got the job done:
+
+{% highlight ruby %}
+
+ self.fantasyPoints = (pitchers) => {
+    for (let i = 0; i < pitchers.length; i++) {
+      console.log(pitchers[i].name)
+      pitchers[i].name = pitchers[i].name;
+      pitchers[i].inningsPitched = pitchers[i].statistics[0].inningsPitched;
+      pitchers[i].starts = pitchers[i].statistics[1].starts;
+      pitchers[i].strikeouts = pitchers[i].statistics[2].strikeouts;
+      pitchers[i].earnedRuns = pitchers[i].statistics[3].earnedRuns;
+      pitchers[i].walks = pitchers[i].statistics[4].walks;
+      pitchers[i].wins = pitchers[i].statistics[5].wins;
+      pitchers[i].losses = pitchers[i].statistics[6].losses;
+      pitchers[i].hits = pitchers[i].statistics[7].hits;
+      pitchers[i].fantasyPoints = parseFloat((Math.round(((pitchers[i].inningsPitched * 3) + (pitchers[i].wins * 5) + (pitchers[i].hits * -1) + (pitchers[i].earnedRuns * -2) + (pitchers[i].losses * -5) + (pitchers[i].strikeouts * 1) + (pitchers[i].walks * -1)) * 10) / 10).toFixed(1));
+      pitchers[i].averagePoints = parseFloat((Math.round((pitchers[i].fantasyPoints / pitchers[i].starts) * 10) / 10).toFixed(1));
+      self.pitchers.data = pitchers;
+      console.log(self.pitchers.data);
+    }
+  } //End fantasy pitcher routes.
+
+{% endhighlight %}
+
 [pitch-aid]: https://pitch-aid.herokuapp.com/
