--- a/_posts/2017-12-09-pitch-aid.md
+++ b/_posts/2017-12-09-pitch-aid.md
@@ -4,7 +4,7 @@ title:  "My solo project: Pitch Aid"
 date:   2017-12-09 22:41:56 -0600
 categories: jekyll update
 ---
-During my time at Prime Digital Academy, I had the opportunity to work on a full stack application that matches my interests.
+While studying software development at Prime Digital Academy, I had the opportunity to work on a full stack application that matches my interests.
 
 As a regular fantasy baseball player, I set out to create an application that would help users manage starting pitchers in fantasy baseball. In standard fantasy baseball leagues, players are allowed nine slots for pitchers -- both starters and relievers. Multiple pitchers can also be stored on the bench, as a standard fantasy baseball team has a roster size of 25 slots and 22 active positions. 
 
