--- a/_posts/2017-12-09-pitch-aid.md
+++ b/_posts/2017-12-09-pitch-aid.md
@@ -11,7 +11,9 @@ As a regular fantasy baseball player, I set out to create an application that wo
 With a 162 game Major League Baseball season, it can be a challenge to manage the schedule of starting pitchers while maintaining the best use of your bench. Pitch Aid allows users to implement the name and stats of their starting pitchers and manage their progress over the course of a season.
 Thus, we have Pitch Aid. To check out the finished project, follow this link: [pitch aid][pitch-aid]
 
-The application uses the MEAN stack: MongoDB, Express, AngularJS and Node.js. Perhaps one of the most difficult challenges of the application was developing a loop that would calculate fantasy baseball points in a season plus points per fantasy start. The for loop code is below. It was not the prettiest line of code, but it got the job done:
+The application uses the MEAN stack: MongoDB, Express, AngularJS and Node.js. The application also uses an API from mysportsfeeds.com to get pitcher statistics.
+
+Perhaps one of the most difficult challenges of the application was developing a loop that would calculate fantasy baseball points in a season plus points per fantasy start. The for loop code is below. It was not the prettiest line of code, but it got the job done:
 
 {% highlight ruby %}
 
