--- a/_posts/2017-12-09-pitch-aid.md
+++ b/_posts/2017-12-09-pitch-aid.md
@@ -13,7 +13,7 @@ Thus, we have Pitch Aid. To check out the finished project, follow this link: [p
 
 The application uses the MEAN stack: MongoDB, Express, AngularJS and Node.js. The application also uses an API from mysportsfeeds.com to get pitcher statistics and Angular Material for styling.
 
-Perhaps one of the most difficult challenges of the application was developing a loop that would calculate fantasy baseball points in a season plus points per fantasy start. The for loop code is below. It was not the prettiest line of code, but it got the job done:
+Perhaps one of the most difficult challenges of the application was developing a loop that would calculate fantasy baseball points in a season plus points per fantasy start. The for loop code is below. It was not the prettiest function, but it got the job done:
 
 {% highlight ruby %}
 
