--- a/_posts/2017-12-09-pitch-aid.md
+++ b/_posts/2017-12-09-pitch-aid.md
@@ -6,7 +6,7 @@ categories: jekyll update
 ---
 While studying software development at Prime Digital Academy, I had the opportunity to work on a full stack application that matches my interests.
 
-As a regular fantasy baseball player, I set out to create an application that would help users manage starting pitchers in fantasy baseball. In standard fantasy baseball leagues, players are allowed nine slots for pitchers -- both starters and relievers. Multiple pitchers can also be stored on the bench, as a standard fantasy baseball team has a roster size of 25 slots and 22 active positions. 
+As a regular fantasy baseball player, I set out to create an application that would help users manage their starting pitchers. In standard fantasy baseball leagues, players are allowed nine slots for pitchers -- both starters and relievers. Multiple pitchers can also be stored on the bench, as a standard fantasy baseball team has a roster size of 25 slots and 22 active positions. 
 
 With a 162 game Major League Baseball season, it can be a challenge to manage the schedule of starting pitchers while maintaining the best use of your bench. Pitch Aid allows users to implement the name and stats of their starting pitchers and manage their progress over the course of a season.
 Thus, we have Pitch Aid. To check out the finished project, follow this link: [pitch aid][pitch-aid]
